Add email language support
