# pkg/services/manager/validation.go
@@ -177,6 +177,13 @@ func ValidateCreatePolicyParams(ctx context.Context, req *pb.CreatePolicyRequest
 		return err
 	}
 
+	language := req.GetLanguage()
+	err = checkStringLen(ctx, language, 8)
+	if err != nil {
+		logger.Error(ctx, "Failed to validate Language [%s]: %+v", language, err)
+		return err
+	}
+
 	return nil
 }
 
@@ -227,6 +234,13 @@ func ValidateModifyPolicyParams(ctx context.Context, req *pb.ModifyPolicyRequest
 	err = checkStringLen(ctx, rsTypeId, 50)
 	if err != nil {
 		logger.Error(ctx, "Failed to validate RsTypeId [%s]: %+v", rsTypeId, err)
+		return err
+	}
+
+	language := req.GetLanguage()
+	err = checkStringLen(ctx, language, 8)
+	if err != nil {
+		logger.Error(ctx, "Failed to validate Language [%s]: %+v", language, err)
 		return err
 	}
 
